--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Cartel Tallado Rústico 1</h3>
                     <p class="card-text">Este cartel tallado rústico está hecho a mano, ideal para dar un toque único y acogedor a tu hogar.</p>
-                    <a class="waves-effect waves-light btn modal-trigger" href="#modal1"><i class="material-icons left">visibility</i>Ver Más</a>
+                    <a class="waves-effect waves-light btn" href="#" onclick="navigate('detalle')"><i class="material-icons left">visibility</i>Ver Más</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Cartel Tallado Rústico 2</h3>
                     <p class="card-text">Cartel tallado a mano con diseño personalizado, perfecto para cualquier espacio con un estilo colonial.</p>
-                    <a class="waves-effect waves-light btn modal-trigger" href="#modal1"><i class="material-icons left">visibility</i>Ver Más</a>
+                    <a class="waves-effect waves-light btn" href="#" onclick="navigate('detalle')"><i class="material-icons left">visibility</i>Ver Más</a>
                 </div>
             </div>
         </div>
@@ -134,12 +134,7 @@
 
     <!-- Pie de página -->
             <!-- Modal para Detalles del Producto -->
-    <div id="modal1" class="modal">
-        <div class="modal-content">
-            <h4>Detalles del Cartel Tallado</h4>
-            <img src="https://via.placeholder.com/800x600" class="img-fluid mb-4" alt="Detalle del Cartel Tallado">
-            <p>Aquí se muestran los detalles específicos del cartel tallado seleccionado, incluyendo dimensiones, material y precio.</p>
-        </div>
+    
         <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cerrar</a>
         </div>
