--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
     <!-- Sección de Inicio -->
     <section id="inicio" class="container my-5 text-center">
-    <h1>Proyecto</h1>
-    <p>Mosquita Muerta nace como una colección excepcional de tallados únicos. Cada pieza refleja nuestro compromiso con la autenticidad, el detalle y la tradición artesanal.</p>
-    <p>Ubicados en una hermosa zona rural, nuestros talleres en Gualtallary, Vista Flores y Altamira son el núcleo donde la creatividad toma forma. Aquí, fusionamos inspiración colonial, técnicas ancestrales y la personalización artesanal para lograr la mezcla perfecta entre tradición y modernidad.</p>
+    <h1>Proyecto Tallados El Prodigio</h1>
+    <p>Tallados El Prodigio es una colección excepcional de tallados únicos. Cada pieza refleja nuestro compromiso con la autenticidad, el detalle y la tradición artesanal.</p>
+    <p>Ubicados en una hermosa zona rural, nuestros talleres son el núcleo donde la creatividad toma forma. Aquí, fusionamos inspiración colonial, técnicas ancestrales y la personalización artesanal para lograr la mezcla perfecta entre tradición y modernidad.</p>
     <p>Cada cartel tallado es inimitable, llevando consigo la esencia del lugar donde fue creado y la pasión de quienes lo producen. No solo fabricamos productos, sino que contamos historias únicas a través de cada pieza, haciendo que nuestros clientes lleven consigo un pedazo de nuestra historia.</p>
     <ul>
         <li><strong>Inspiración y Estilo:</strong> Nuestros tallados están inspirados en un estilo colonial que transmite una sensación rústica, perfecta para ambientes acogedores.</li>
