--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         body {
             display: flex;
             flex-direction: column;
-            background-color: #e0e0e0; /* Gris claro, menos intenso */ /* Muy claro gris */
+            background-color: #fafafa; /* Gris claro, menos intenso */ /* Muy claro gris */
             color: #333; /* Texto más oscuro para contraste */
         }
         main {
