--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
     <!-- Sección de Inicio -->
     <section id="inicio" class="container my-5 text-center">
     <h1>Proyecto Tallados El Prodigio</h1>
-    <p>Tallados El Prodigio es una colección excepcional de tallados únicos. Cada pieza refleja nuestro compromiso con la autenticidad, el detalle y la tradición artesanal.</p>
-    <p>Ubicados en una zona rural que potencia la creatividad, nuestros talleres son el lugar donde la inspiración y la tradición se unen para crear cada pieza. Nos enfocamos en fusionar métodos tradicionales con un toque moderno, manteniendo siempre el compromiso con la personalización artesanal que nuestros clientes aprecian.</p>
-    <p>Cada cartel tallado refleja la dedicación del trabajo artesanal y la identidad del lugar donde fue creado. Más allá de vender un producto, buscamos ofrecer algo significativo para nuestros clientes, conectando cada pieza con sus propias historias y experiencias.</p>
+    <p>En Tallados El Prodigio, cada pieza es creada con dedicación, combinando autenticidad, detalle y tradición artesanal para ofrecer un producto único y significativo.</p>
+    <p>Nuestros talleres, ubicados en una zona rural que inspira creatividad, son el espacio donde tradición y modernidad se encuentran. Combinamos métodos artesanales con un enfoque personalizado para ofrecer productos que resuenen con la visión de nuestros clientes.</p>
+    <p>Cada cartel refleja la dedicación de nuestros artesanos y el carácter del lugar donde fue creado. Más que un producto, buscamos que cada pieza conecte con nuestros clientes, aportando un significado personal a sus espacios.</p>
     <ul>
-        <li><strong>Inspiración y Estilo:</strong> Nuestros tallados combinan influencias coloniales con un toque personalizado que crea un ambiente acogedor y auténtico.</li>
+        <li><strong>Inspiración y Estilo:</strong> Influencias coloniales mezcladas con detalles personalizados para lograr un ambiente acogedor y auténtico.</li>
         <li><strong>Hecho a Mano:</strong> Cada pieza es realizada de manera artesanal, asegurando que cada cartel sea único, con detalles que resalten la destreza de nuestros artesanos.</li>
         <li><strong>Personalización:</strong> Ofrecemos la posibilidad de personalizar los diseños, permitiendo que cada cliente lleve consigo un pedazo de historia y personalidad en cada tallado.</li>
         <li><strong>Ubicación Rural:</strong> Nuestros talleres están ubicados en una zona rural que inspira cada proceso artesanal y fomenta el enfoque detallista en cada pieza creada.</li>
     </ul>
-    <p>Este proyecto no solo se trata de vender un producto, sino de transmitir una experiencia, conectando el arte con la esencia de cada cliente.</p>
+    <p>Este proyecto busca transmitir una experiencia, haciendo que cada cliente encuentre en nuestras piezas un reflejo de su esencia y estilo personal.</p>
 </section>
 
     <!-- Sección de la Trabajos Hechos -->
