--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <!-- Sección de Inicio -->
     <section id="inicio" class="container my-5 text-center">
     <h1>Proyecto Tallados El Prodigio</h1>
-    <p>En Tallados El Prodigio, cada pieza nace de la dedicación y el compromiso con la autenticidad. Buscamos mezclar detalles y tradición artesanal para ofrecer un producto que resuene de manera única con nuestros clientes.</p>
-    <p>Nuestros talleres se encuentran en un entorno rural que potencia la creatividad, un lugar donde los métodos tradicionales se combinan con enfoques modernos. Así, logramos que cada diseño tenga el equilibrio perfecto entre lo clásico y lo contemporáneo.</p>
-    <p>Más que un simple objeto decorativo, cada cartel tiene una historia. Refleja la pasión de nuestros artesanos y está pensado para que cada cliente sienta que lleva a casa una parte de nuestra dedicación y cuidado.</p>
+    <p>En Tallados El Prodigio, cada pieza es creada con dedicación, combinando autenticidad, detalle y tradición artesanal para ofrecer un producto único y significativo.</p>
+    <p>Nuestros talleres, ubicados en una zona rural que inspira creatividad, son el espacio donde tradición y modernidad se encuentran. Combinamos métodos artesanales con un enfoque personalizado para ofrecer productos que resuenen con la visión de nuestros clientes.</p>
+    <p>Cada cartel refleja la dedicación de nuestros artesanos y el carácter del lugar donde fue creado. Más que un producto, buscamos que cada pieza conecte con nuestros clientes, aportando un significado personal a sus espacios.</p>
     <ul>
         <li><strong>Inspiración y Estilo:</strong> Influencias coloniales mezcladas con detalles personalizados para lograr un ambiente acogedor y auténtico.</li>
         <li><strong>Hecho a Mano:</strong> Cada pieza es realizada de manera artesanal, asegurando que cada cartel sea único, con detalles que resalten la destreza de nuestros artesanos.</li>
