--- a/index.html
+++ b/index.html
@@ -32,20 +32,7 @@
     <li><a href="#" onclick="navigate('ubicacion')"><i class="material-icons left">place</i>Ubicación</a></li>
     <li><a href="#" onclick="navigate('contacto')"><i class="material-icons left">contacts</i>Contacto</a></li>
 </ul>
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" >Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" >Trabajos Hechos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" >Ubicación</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" >Contacto</a>
-                </li>
-            </ul>
+            
         </div>
     </div>
 </nav>
@@ -118,12 +105,13 @@
 
     <!-- JavaScript de Materialize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var elems = document.querySelectorAll('.sidenav');
-            var instances = M.Sidenav.init(elems);
-        });
-    </script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.sidenav');
+        M.Sidenav.init(elems);
+        navigate('inicio'); // Inicialización: Mostrar solo la sección de inicio al cargar la página
+    });
+</script>
     <!-- JavaScript para manejar la navegación de SPA -->
     <script>
         function navigate(sectionId) {
@@ -147,11 +135,12 @@
 
     <!-- JavaScript de Materialize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var elems = document.querySelectorAll('.sidenav');
-            var instances = M.Sidenav.init(elems);
-        });
-    </script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.sidenav');
+        M.Sidenav.init(elems);
+        navigate('inicio'); // Inicialización: Mostrar solo la sección de inicio al cargar la página
+    });
+</script>
 </body>
 </html>
