--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <!-- Pie de página -->
         </main>
-    <footer class="page-footer teal">
+<footer class="page-footer teal" style="position: fixed; bottom: 0; width: 100%;">
     <p>&copy; 2024 Tallados El Prodigio. Todos los derechos reservados.</p>
 </footer>
 
