--- a/index.html
+++ b/index.html
@@ -4,35 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPA Básica</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#home" onclick="navigate('home')">Inicio</a></li>
-            <li><a href="#about" onclick="navigate('about')">Sobre Nosotros</a></li>
-            <li><a href="#contact" onclick="navigate('contact')">Contacto</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">SPA Básica</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#home" onclick="navigate('home')">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about" onclick="navigate('about')">Sobre Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact" onclick="navigate('contact')">Contacto</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
-    <div id="content">
+    <div id="content" class="container mt-4">
         <!-- El contenido se actualizará aquí -->
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         // Definición del contenido de cada página
         const pages = {
             home: `
-                <h1>Bienvenido a nuestra página principal</h1>
-                <p>Esta es la sección de inicio de nuestra SPA.</p>
+                <div class="jumbotron">
+                    <h1 class="display-4">Bienvenido a nuestra página principal</h1>
+                    <p class="lead">Esta es la sección de inicio de nuestra SPA.</p>
+                </div>
             `,
             about: `
-                <h1>Sobre Nosotros</h1>
-                <p>Somos una empresa dedicada a la innovación y desarrollo de soluciones tecnológicas.</p>
+                <div class="card">
+                    <div class="card-body">
+                        <h1 class="card-title">Sobre Nosotros</h1>
+                        <p class="card-text">Somos una empresa dedicada a la innovación y desarrollo de soluciones tecnológicas.</p>
+                    </div>
+                </div>
             `,
             contact: `
-                <h1>Contacto</h1>
-                <p>Puedes contactarnos a través del correo electrónico: contacto@example.com</p>
+                <div class="card">
+                    <div class="card-body">
+                        <h1 class="card-title">Contacto</h1>
+                        <p class="card-text">Puedes contactarnos a través del correo electrónico: <a href="mailto:contacto@example.com">contacto@example.com</a></p>
+                    </div>
+                </div>
             `
         };
 
@@ -46,36 +71,3 @@
     </script>
 </body>
 </html>
-
-/* styles.css (contenido básico de CSS) */
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
-nav {
-    background-color: #333;
-    padding: 1em;
-}
-nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    margin: 0;
-    padding: 0;
-}
-nav ul li {
-    margin: 0;
-}
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-nav ul li a:hover {
-    text-decoration: underline;
-}
-#content {
-    padding: 2em;
-}
