--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPA Básica</title>
+    <title>Tu Leyenda</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">SPA Básica</a>
+        <a class="navbar-brand" href="#" style="font-style: italic; font-family: 'Lucida Sans', sans-serif;">Tu Leyenda</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -69,5 +69,10 @@
         // Inicializar la página mostrando la sección de inicio
         navigate('home');
     </script>
+    <footer class="footer bg-dark text-white text-center py-3" style="position: fixed; bottom: 0; width: 100%;">
+        <div class="container">
+            <span>© 2024 Tu Leyenda. Todos los derechos reservados.</span>
+        </div>
+    </footer>
 </body>
 </html>
