--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </script>
     <footer class="footer bg-dark text-white text-center py-3" style="position: fixed; bottom: 0; width: 100%;">
         <div class="container">
-            <span>© 2024 Tu Leyenda. Todos los derechos reservados.</span>
+            <span>Hecho por Federico Goncalvez. Todos los derechos reservados.</span>
         </div>
     </footer>
 </body>
