--- a/index.html
+++ b/index.html
@@ -39,9 +39,21 @@
         const pages = {
             home: `
                 <div class="jumbotron">
-                    <h1 class="display-4">Bienvenido a nuestra página principal</h1>
-                    <p class="lead">Esta es la sección de inicio de nuestra SPA.</p>
-                </div>
+        <h1 class="display-4">Proyecto</h1>
+        <div class="container mt-4">
+            <section>
+                <h2>Nuestra Historia</h2>
+                <p class="lead">Nuestro negocio nació con la misión de ayudar a la comunidad mediante soluciones sostenibles que marcan una diferencia. Nos especializamos en la creación de productos que aportan valor y cuidado al medio ambiente.</p>
+            </section>
+            <section class="mt-4">
+                <h2>Nuestro Enfoque</h2>
+                <p class="lead">Creemos firmemente en la innovación y el compromiso con la calidad. Nuestra metodología combina tecnología avanzada con técnicas tradicionales para ofrecer productos únicos y responsables.</p>
+            </section>
+            <section class="mt-4">
+                <h2>Nuestros Valores</h2>
+                <p class="lead">Valoramos la transparencia, el trabajo en equipo y la sostenibilidad. Estamos comprometidos a brindar siempre lo mejor, respetando tanto a nuestros clientes como al medio ambiente.</p>
+            </section>
+        </div>
             `,
             about: `
                 <div class="card">
