--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         // Inicializar la página mostrando la sección de inicio
         navigate('home');
     </script>
-    <footer class="footer bg-dark text-white text-center py-4" style="position: fixed; bottom: 0; width: 100%; margin-bottom: 10px;">
+    <footer class="footer bg-dark text-white text-center py-4" style="position: fixed; bottom: 0; width: 100%; padding-bottom: 20px;">
         <div class="container">
             <span>Hecho por Federico Goncalvez. Todos los derechos reservados.</span>
         </div>
