--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         const pages = {
             home: `
                 <div class="jumbotron">
-        <h1 class="display-4">Proyecto</h1>
+        <h1 class="display-4">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales</h1>
         <div class="container mt-4">
             <section>
                 <h2>Nuestra Historia</h2>
