--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         const pages = {
             home: `
                 <div class="jumbotron">
-        <h1 class="display-4">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales</h1>
+        
         <div class="container mt-4">
             <section>
                 <h2>Nuestra Historia</h2>
-                <p class="lead">Nuestro negocio nació con la misión de ayudar a la comunidad mediante soluciones sostenibles que marcan una diferencia. Nos especializamos en la creación de productos que aportan valor y cuidado al medio ambiente.</p>
+                <p class="lead">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales</p>
             </section>
             <section class="mt-4">
                 <h2>Nuestro Enfoque</h2>
