--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </section>
             <section class="mt-4">
                 <h2>Nuestro Enfoque</h2>
-                <p class="lead">Creemos firmemente en la innovación y el compromiso con la calidad. Nuestra metodología combina tecnología avanzada con técnicas tradicionales para ofrecer productos únicos y responsables.</p>
+                <p class="lead">Nos enfocamos en diseñar una funcionalidad doble, nuestros letreros sirven para indicar su ubicación al mismo tiempo que aportan conexión al transmitir su identidad y sus valores.</p>
             </section>
             <section class="mt-4">
                 <h2>Nuestros Valores</h2>
