--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </section>
             <section class="mt-4">
                 <h2>Nuestro Enfoque</h2>
-                <p class="lead">Nos enfocamos en diseñar una funcionalidad doble, nuestros letreros sirven para indicar su ubicación al mismo tiempo que aportan conexión al transmitir su identidad y sus valores.</p>
+                <p class="lead">Nuestro enfoque está en diseñar letreros que cumplan una doble función: no solo indican una ubicación, sino que también reflejan la identidad y los valores de quienes los eligen, creando una conexión auténtica con el entorno.</p>
             </section>
             <section class="mt-4">
                 <h2>Nuestros Valores</h2>
