--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <div id="content" class="container mt-4">
+    <div id="content" class="container mt-4" style="background-color: #D2B48C;">
         <!-- El contenido se actualizará aquí -->
     </div>
 
@@ -39,12 +39,12 @@
         // Definición del contenido de cada página
         const pages = {
             home: `
-                <div class="jumbotron">
+                <div class="jumbotron" style="background-color: #D2B48C;">
         
         <div class="container mt-5 mb-5">
             <section>
                 <h2>Nuestra Historia</h2>
-                <p class="lead">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales.</p>
+                <p class="lead">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales</p>
             </section>
             <section class="mt-5 pt-3">
                 <h2>Nuestro Enfoque</h2>
