--- a/index.html
+++ b/index.html
@@ -42,18 +42,24 @@
                 <div class="jumbotron" style="background-color: #D2B48C;">
         
         <div class="container mt-5 mb-5">
-            <section>
-                <h2>Nuestra Historia</h2>
-                <p class="lead">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales</p>
-            </section>
-            <section class="mt-5 pt-3">
-                <h2>Nuestro Enfoque</h2>
-                <p class="lead">Nuestro enfoque está en diseñar letreros que cumplan una doble función: no solo indican una ubicación, sino que también reflejan la identidad y los valores de quienes los eligen, creando una conexión auténtica con el entorno.</p>
-            </section>
-            <section class="mt-5 pt-3">
-                <h2>Nuestros Valores</h2>
-                <p class="lead">Valoramos la transparencia, el trabajo en equipo y la sostenibilidad. Estamos comprometidos a brindar siempre lo mejor, respetando tanto a nuestros clientes como al medio ambiente.</p>
-            </section>
+            <div class="card mb-4">
+                    <div class="card-body">
+                        <h2 class="card-title">Nuestra Historia</h2>
+                        <p class="card-text">$1</p>
+                    </div>
+                </div>
+            <div class="card mb-4">
+                    <div class="card-body">
+                        <h2 class="card-title">Nuestro Enfoque</h2>
+                        <p class="card-text">$1</p>
+                    </div>
+                </div>
+            <div class="card mb-4">
+                    <div class="card-body">
+                        <h2 class="card-title">Nuestros Valores</h2>
+                        <p class="card-text">$1</p>
+                    </div>
+                </div>
         </div>
             `,
             about: `
