--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <div id="content" class="container mt-4" style="background-color: #D2B48C;">
+    <div id="content" class="container mt-4" >
         <!-- El contenido se actualizará aquí -->
     </div>
 
@@ -39,25 +39,23 @@
         // Definición del contenido de cada página
         const pages = {
             home: `
-                <div class="jumbotron" style="background-color: #D2B48C;">
+                <div class="jumbotron" >
         
         <div class="container mt-5 mb-5">
             <div class="card mb-4">
                     <div class="card-body">
                         <h2 class="card-title">Nuestra Historia</h2>
-                        <p class="card-text">$1</p>
+                        <p class="card-text">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales.</p>
                     </div>
                 </div>
             <div class="card mb-4">
                     <div class="card-body">
-                        <h2 class="card-title">Nuestro Enfoque</h2>
-                        <p class="card-text">$1</p>
+                        Nuestro enfoque está en diseñar letreros que cumplan una doble función: no solo indican una ubicación, sino que también reflejan la identidad y los valores de quienes los eligen, creando una conexión auténtica con el entorno.
                     </div>
                 </div>
             <div class="card mb-4">
                     <div class="card-body">
-                        <h2 class="card-title">Nuestros Valores</h2>
-                        <p class="card-text">$1</p>
+                        Valoramos la transparencia, el trabajo en equipo y la sostenibilidad. Estamos comprometidos a brindar siempre lo mejor, respetando tanto a nuestros clientes como al medio ambiente.
                     </div>
                 </div>
         </div>
