--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
                 </div>
             <div class="card mb-4">
                     <div class="card-body">
-                        Nuestro enfoque está en diseñar letreros que cumplan una doble función: no solo indican una ubicación, sino que también reflejan la identidad y los valores de quienes los eligen, creando una conexión auténtica con el entorno.
+                        <h2 class="card-title">$1</h2>
+                        <p class="card-text">$1</p>
                     </div>
                 </div>
             <div class="card mb-4">
                     <div class="card-body">
-                        Valoramos la transparencia, el trabajo en equipo y la sostenibilidad. Estamos comprometidos a brindar siempre lo mejor, respetando tanto a nuestros clientes como al medio ambiente.
+                        <h2 class="card-title">$1</h2>
+                        <p class="card-text">$1</p>
                     </div>
                 </div>
         </div>
