--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                 </div>
             <div class="card mb-4">
                     <div class="card-body">
-                        <h2 class="card-title">$1</h2>
-                        <p class="card-text">$1</p>
+                        <h2 class="card-title">Título de la Sección</h2>
+                        <p class="card-text">Contenido correspondiente a esta sección.</p>
                     </div>
                 </div>
             <div class="card mb-4">
                     <div class="card-body">
-                        <h2 class="card-title">$1</h2>
-                        <p class="card-text">$1</p>
+                        <h2 class="card-title">Título de la Sección</h2>
+                        <p class="card-text">Contenido correspondiente a esta sección.</p>
                     </div>
                 </div>
         </div>
