--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                 </div>
             <div class="card mb-4">
                     <div class="card-body">
-                        <h2 class="card-title">Título de la Sección</h2>
-                        <p class="card-text">Contenido correspondiente a esta sección.</p>
+                        <h2 class="card-title">Nuestro Enfoque</h2>
+                        <p class="card-text">Nuestro enfoque está en diseñar letreros que cumplan una doble función: no solo indican una ubicación, sino que también reflejan la identidad y los valores de quienes los eligen, creando una conexión auténtica con el entorno.</p>
                     </div>
                 </div>
             <div class="card mb-4">
                     <div class="card-body">
-                        <h2 class="card-title">Título de la Sección</h2>
-                        <p class="card-text">Contenido correspondiente a esta sección.</p>
+                        <h2 class="card-title">Nuestros Valores</h2>
+                        <p class="card-text">Valoramos la transparencia, el trabajo en equipo y la sostenibilidad. Estamos comprometidos a brindar siempre lo mejor, respetando tanto a nuestros clientes como al medio ambiente.</p>
                     </div>
                 </div>
         </div>
