--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <div id="content" class="container mt-4 mb-5">
+    <div id="content" class="container mt-4 mb-5" style="min-height: calc(100vh - 100px);">
         <!-- El contenido se actualizará aquí -->
     </div>
 
@@ -87,7 +87,7 @@
         // Inicializar la página mostrando la sección de inicio
         navigate('home');
     </script>
-    <footer class="footer bg-dark text-white text-center py-4 footer-fixed" style="position: absolute; bottom: 0; width: 100%;">
+    <footer class="footer bg-dark text-white text-center py-4 footer-fixed" style="position: relative; bottom: 0; width: 100%;">
         <div class="container">
             <span>Hecho por Federico Goncalvez. Todos los derechos reservados.</span>
         </div>
