--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="#home" onclick="navigate('home')">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about" onclick="navigate('about')">Sobre Nosotros</a>
+                    <a class="nav-link" href="#about" onclick="navigate('about')">Servicios</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact" onclick="navigate('contact')">Contacto</a>
