--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="#home" onclick="navigate('home')">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about" onclick="navigate('about')">Servicios</a>
+                    <a class="nav-link" href="#about" onclick="navigate('about')">Sobre Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact" onclick="navigate('contact')">Contacto</a>
@@ -39,8 +39,10 @@
         // Definición del contenido de cada página
         const pages = {
             home: `
-               
-        <div class="container mt-5 mb-5">
+                <div class="container mt-5 mb-5">
+                    <img src="/mnt/data/image.png" class="img-fluid w-100" alt="Imagen principal" style="max-height: 500px; object-fit: cover;">
+                </div>
+                <div class="container mt-5 mb-5">
             <div class="card mb-4">
                     <div class="card-body">
                         <h2 class="card-title">Nuestra Historia</h2>
