--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         const pages = {
             home: `
                 <div class="container mt-5 mb-5">
-                    <img src="/images/image.jpg" class="img-fluid w-100" alt="Imagen principal" style="max-height: 500px; object-fit: cover;">
+                    <img src="images/image.jpg" class="img-fluid w-100" alt="Imagen principal" style="max-height: 500px; object-fit: cover;">
                 </div>
                 <div class="container mt-5 mb-5">
             <div class="card mb-4">
