--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                     <a class="nav-link" href="#home" onclick="navigate('home')">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about" onclick="navigate('about')">Sobre Nosotros</a>
+                    <a class="nav-link" href="#about" onclick="navigate('product')">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about" onclick="navigate('service')">Servicios</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact" onclick="navigate('contact')">Contacto</a>
@@ -69,7 +72,15 @@
                 </div>
         
             `,
-            about: `
+            products: `
+                <div class="card">
+                    <div class="card-body">
+                        <h1 class="card-title">Sobre Nosotros</h1>
+                        <p class="card-text">Somos una empresa dedicada a la innovación y desarrollo de soluciones tecnológicas.</p>
+                    </div>
+                </div>
+            `,
+          service: `
                 <div class="card">
                     <div class="card-body">
                         <h1 class="card-title">Sobre Nosotros</h1>
