--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
         
             `,
-            products: `
+            product: `
                 <div class="card">
                     <div class="card-body">
                         <h1 class="card-title">Sobre Nosotros</h1>
