--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
         
             `,
-            product: `
+            products: `
                 <div class="card">
                     <div class="card-body">
                         <h1 class="card-title">Sobre Nosotros</h1>
@@ -89,13 +89,27 @@
                 </div>
             `,
             contact: `
-                <div class="card">
-                    <div class="card-body">
-                        <h1 class="card-title">Contacto</h1>
-                        <p class="card-text">Puedes contactarnos a través del correo electrónico: <a href="mailto:contacto@example.com">contacto@example.com</a></p>
-                    </div>
+    <div class="card mb-4">
+        <div class="card-body">
+            <h1 class="card-title">Solicitar Presupuesto</h1>
+            <p class="card-text">Puedes contactarnos a través del correo electrónico para cualquier consulta o solicitar un presupuesto detallado de nuestros productos personalizados.</p>
+            <form>
+                <div class="form-group">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre completo">
                 </div>
-            `
+                <div class="form-group">
+                    <label for="email">Correo Electrónico</label>
+                    <input type="email" class="form-control" id="email" placeholder="tu_email@ejemplo.com">
+                </div>
+                <div class="form-group">
+                    <label for="mensaje">Mensaje</label>
+                    <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe aquí tu solicitud o consulta"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary mt-3">Enviar Solicitud</button>
+            </form>
+        </div>
+    </div>`
         };
 
         // Función para navegar entre las "páginas" de la SPA
